--- a/src/template.html
+++ b/src/template.html
@@ -227,13 +227,39 @@ __MCV_BODY_STYLE__
       border-radius: 8px;
       background: #000;
     }
-    .viewer-image {
+    .viewer-full-image-stage {
       width: 100%;
-      max-height: 70vh;
+      max-width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      margin-top: 12px;
+      display: block;
+      overflow-x: hidden;
+      position: relative;
+    }
+    .viewer-full-image-stage.hidden {
+      display: none;
+    }
+    .viewer-full-image {
+      display: block;
+      width: auto;
+      max-width: 100%;
+      height: auto;
+      border: 0;
+      border-radius: 0;
+      background: transparent;
       object-fit: contain;
-      border: 1px solid var(--border);
-      border-radius: 8px;
-      background: #000;
+      margin: 0 auto;
+    }
+    .viewer-selection-box {
+      position: absolute;
+      border: 2px solid var(--accent);
+      background: rgba(101, 214, 166, 0.14);
+      pointer-events: none;
+      z-index: 2;
+    }
+    .viewer-selection-box.hidden {
+      display: none;
     }
     .time-controls {
       display: grid;
@@ -316,6 +342,10 @@ __MCV_BODY_STYLE__
       <div id="viewer-content" class="viewer-content"></div>
     </div>
   </main>
+  <section id="viewer-full-image-stage" class="viewer-full-image-stage hidden">
+    <img id="viewer-full-image" class="viewer-full-image" alt="" />
+    <div id="viewer-selection-box" class="viewer-selection-box hidden"></div>
+  </section>
 __BACKEND_SCRIPTS__
   <script>
 __APP_JS__
